...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H3h-rG-2bF">
                                                    <rect key="frame" x="25" y="13" width="50" height="25"/>
                                                    <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="20"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01.01.19" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOJ-2S-jCJ">
                                                    <rect key="frame" x="298" y="13" width="91" height="25"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="date"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2J-xz-6xQ">
                                                    <rect key="frame" x="26" y="39" width="63" height="19"/>
                                                    <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="15"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="List of Tasks" id="Dya-7y-4gO">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dEH-3S-kBU">
                            <connections>
...
                                </constraints>
                            </mapView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Orel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zKp-c3-PK2">
                                <rect key="frame" x="25" y="69" width="34" height="20"/>
                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="16"/>
...
                                <rect key="frame" x="40" y="184" width="334" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7W-ln-37b">
                                        <rect key="frame" x="0.0" y="0.0" width="40.5" height="30"/>
                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="17"/>
...
                                <rect key="frame" x="40" y="234" width="334" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SqL-Yj-Esz">
                                        <rect key="frame" x="0.0" y="0.0" width="68" height="30"/>
                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="17"/>
...
                                <rect key="frame" x="40" y="284" width="334" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGo-zs-RMA">
                                        <rect key="frame" x="0.0" y="0.0" width="96" height="30"/>
                                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="17"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="Palatino-Bold" family="Palatino" pointSize="20"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
