...
    
    func tableView(_ tableView: UITableView, titleForDeleteConfirmationButtonForRowAt indexPath: IndexPath) -> String? {
        
        if let section = Section(rawValue: indexPath.section) {
            switch section {
            case .todo:
                return "Done"
            case .done:
                return "Undone"
            }
            
        }
        
...
